# korgex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  ROADMAP.md  inject_session.py  korg-ecosystem-assessment-2026-05-28.html  korg-ecosystem-next-2026-05-29.html  korg_dogfood.py  korgkode.sh  launch-readiness-audit-2026-06-20.html  mcp.json  pyproject.toml  requirements.txt  seluj.sh  server.json
.github/actions/verify-ledger/: README.md  action.yml  verify_ledger.py
.github/workflows/: korgex.yml  korgkode.yml  publish.yml  self-coding-bench.yml  tests.yml  verify-ledger-selftest.yml
.korgex/memory/: MEMORY.md
cli/: main.py
demos/: gen_deliverable_data.py
demos/arena/: match.py
docs/: RE_FINDINGS.md  cli-reference.md  comparison.md  demo-near-omnigraph.md  environment.md  flow-runbook.md  getting-started.md  index.md  korgex-explained.html  mcp-registry.md  near.md  omnigraph.md  review-plan.md  running-tasks.md  self-coding-bench.md  self-hosted-inference.md  tools-reference.md
docs/branding/: BRANDKIT.md  demo.tape  korgex-y2k.itermcolors
docs/branding/teaser/: .gitignore  banner.tape  crt.sh  video.tape
docs/superpowers/plans/: 2026-06-22-ledger-inmemory-buildbody.md  2026-06-22-toolgate-seam.md
docs/superpowers/specs/: 2026-06-01-korgex-cli-claude-code-competitor-design.md  2026-06-05-egress-exfil-guard-design.md
examples/near-anchor-contract/: Cargo.toml  README.md
examples/near-anchor-contract/src/: lib.rs
integrations/witness/: README.md  demo.py  test_witness.py  witness.py
korgex-vscode/: korgex-sidecar.vsix  package-lock.json  package.json
korgex-vscode/src/: extension.ts
korgkode-vscode/: korgkode-sidecar.vsix  package-lock.json  package.json
korgkode-vscode/src/: extension.ts
sandbox/: Dockerfile
scripts/: package-vsix.sh  test_mcp_conformance.py
scripts/githooks/: pre-commit
spec/korg-introspect-v1/: contract.json
spec/korg-ledger-v1/: EVENTS.md  SPEC.md  _generate_vectors.py  conformance.json  conformance.py
spec/korg-ledger-v1/vectors/: nonbmp-intact.jsonl
src/: __init__.py  acp.py  agent.py  agent_resolve.py  artifact_index.py  audit_report.py  background_tasks.py  banner.py  browser.py  bus.py  cache_compaction.py  cli.py  code_review.py  command_guard.py  commands.py  compaction.py  config.py  context_compression.py  contract.py  cost.py  custody.py  dashboard.py  demo.py  dependency_graph.py  diff_engine.py  diff_view.py  edit_freshness.py  edit_policy.py  egress_guard.py  errors.py  exec_graph.py  feature_flags.py  fuzzy_patch.py  github_api.py  google_auth.py  guardrails.py  hooks.py  import_adapters.py  interactive.py  introspect.py  (+79 more)
src/assets/: korg_verify.js
src/codeact/: __init__.py  bridge.py  kernel.py  kernel_main.py  protocol.py  sandbox.py
src/commands_builtin/: build-fix.md  checkpoint.md  code-review.md
src/skills_builtin/: CREDITS.md
src/skills_builtin/api-design/: SKILL.md
src/skills_builtin/authoring-a-skill/: SKILL.md
src/skills_builtin/browser-automation/: SKILL.md
src/skills_builtin/building-an-mcp-server/: SKILL.md
src/skills_builtin/ci-cd-pipelines/: SKILL.md
src/skills_builtin/code-review/: SKILL.md
src/skills_builtin/concurrency-correctness/: SKILL.md
src/skills_builtin/condition-based-waiting/: SKILL.md
src/skills_builtin/data-pipelines/: SKILL.md
src/skills_builtin/database-migrations/: SKILL.md
src/skills_builtin/delegating-to-subagents/: SKILL.md
src/skills_builtin/deploying-safely/: SKILL.md
src/skills_builtin/designing-a-job-queue/: SKILL.md
src/skills_builtin/error-handling/: SKILL.md
src/skills_builtin/exploring-a-codebase/: SKILL.md
src/skills_builtin/handling-ambiguity/: SKILL.md
src/skills_builtin/handling-webhooks/: SKILL.md
src/skills_builtin/incident-response/: SKILL.md
src/skills_builtin/issue-triage/: SKILL.md
src/skills_builtin/managing-dependencies/: SKILL.md
src/skills_builtin/observability-and-logging/: SKILL.md
src/skills_builtin/performance-profiling/: SKILL.md
src/skills_builtin/react-doctor/: SKILL.md
src/skills_builtin/requesting-code-review/: SKILL.md
src/skills_builtin/safe-refactoring/: SKILL.md
src/skills_builtin/security-review/: SKILL.md
src/skills_builtin/security-scan/: SKILL.md
src/skills_builtin/spike/: SKILL.md
src/skills_builtin/summarize/: SKILL.md
src/skills_builtin/systematic-debugging/: SKILL.md
src/skills_builtin/test-driven-development/: SKILL.md
src/skills_builtin/using-git/: SKILL.md
src/skills_builtin/verifiable-orchestration/: SKILL.md
src/skills_builtin/verify-before-done/: SKILL.md
src/skills_builtin/web-research/: SKILL.md
tests/: stub_mcp_server.py  test_acp.py  test_acp_cancel.py  test_acp_session.py  test_agent_resolve.py  test_anchored_tip.py  test_arena_match.py  test_artifact_index.py  test_audit.py  test_audit_report.py  test_background_tasks.py  test_banner.py  test_best_of_n.py  test_blob_retrieve.py  test_bridge.py  test_browser_actions.py  test_browser_audit.py  test_browser_crawl.py  test_browser_fetch.py  test_browser_fixes.py  test_browser_selfheal.py  test_browser_snapshot.py  test_browser_stealth.py  test_builtin_skills.py  test_bus.py  test_bus_provenance.py  test_cache_compaction.py  test_cache_ledger.py  test_checkpoint.py  test_cli_output.py  test_code_review.py  test_codeact_integration.py  test_codeact_kernel.py  test_codeact_loop.py  test_codeact_sandbox.py  test_command_guard.py  test_commands.py  test_compaction.py  test_compaction_cache_integration.py  test_compress_tool_result.py  (+125 more)
(+2 files in other folders)
