[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korgkode"
version = "1.0.0"
description = "Autonomous AI Software Engineer — refactor, heal, profile, and compress from CLI or VS Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "httpx",
]

[project.scripts]
korgkode = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]