[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korgex"
version = "0.6.0"
description = "Autonomous AI coding agent — provider-agnostic, MCP-native, plan-first"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "New1Direction" },
]
keywords = ["ai", "agent", "coding", "llm", "claude", "openai", "mcp", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.1.0,<1.0.0",
    "build>=1.0.0,<2.0.0",
    "twine>=5.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/New1Direction/Korgex"
Repository = "https://github.com/New1Direction/Korgex"
Issues = "https://github.com/New1Direction/Korgex/issues"

[project.scripts]
korgex = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "korgex-vscode*", "sandbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
