[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korgex"
version = "0.36.0"
description = "Autonomous AI coding agent — provider-agnostic, MCP-native, plan-first"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "New1Direction" },
]
keywords = ["ai", "agent", "coding", "llm", "claude", "openai", "mcp", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "cryptography>=41.0.0",
    "prompt_toolkit>=3.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.1.0,<1.0.0",
    "build>=1.0.0,<2.0.0",
    "twine>=5.0.0,<7.0.0",
]
# Verifiable browser suite (src/browser.py, browser_* tools). Optional: these are
# imported lazily inside functions only (open_session / tiered fetch), so the core
# install and the offline test suite never require them. Enable with:
#   pip install 'korgex[browser]' && playwright install chromium
browser = [
    "playwright>=1.40.0,<2.0.0",
    "patchright>=1.40.0",
    "curl_cffi>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/New1Direction/Korgex"
Repository = "https://github.com/New1Direction/Korgex"
Issues = "https://github.com/New1Direction/Korgex/issues"

[project.scripts]
korgex = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "korgex-vscode*", "sandbox*"]

[tool.setuptools.package-data]
# Ship non-Python runtime assets: the in-browser ledger verifier (embedded by
# `korgex audit --html`) and the bundled built-in skill library (SKILL.md files
# discovered at runtime). Without these they're absent from the wheel.
src = ["assets/*.js", "skills_builtin/*/SKILL.md", "commands_builtin/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Put the repo root on sys.path so `from src...` imports resolve under a bare
# `pytest` invocation, not just `python -m pytest`. Without this the agent's own
# self-verification (and CI / contributors) hit ModuleNotFoundError: src.
pythonpath = ["."]
