[package]
name = "korgex-near-anchor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5", features = ["legacy"] }
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
near-sdk = { version = "5", features = ["legacy", "unit-testing"] }
